--- a/index.html
+++ b/index.html
@@ -35,6 +35,10 @@
 
   </div>
 
+  <footer>
+    Made with HTML, CSS, and JS by <strong><a href="https://in.linkedin.com/in/santosh-vollala-a127a7141/" target="_blank">Santosh Kumar Vollala</a></strong>.
+  </footer>
+
   <script src="https://code.jquery.com/jquery-3.5.0.min.js" integrity="sha256-xNzN2a4ltkB44Mc/Jz3pT4iU1cmeR0FkXs4pru/JxaQ=" crossorigin="anonymous"></script>
   <script type="text/javascript" src="game.js"></script>
 </body>
